# Sharper

./: .gitignore  CLAUDE.md  PROMPT.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
backend/data/: ids.example.txt  ids.txt  questions.example.jsonl  questions.metaculus.jsonl
backend/db/migrations/: 001_initial.sql
backend/eval/reviews/: 2026-05-21-204554.json
backend/eval/runs/: 2026-05-20-220054.json  2026-05-21-113655.json  2026-05-21-120422.json  2026-05-21-121442.json
backend/scripts/: blind_review.py  fetch_metaculus.py  run_eval.py
backend/sharper/: api.py  auth.py  cli.py  critic.py  observability.py  persistence.py  ratelimit.py  rubric.py  schema.py
backend/tests/: test_api.py  test_auth.py  test_blind_review.py  test_fetch_metaculus.py  test_observability.py  test_ratelimit.py  test_run_eval.py  test_smoke.py
frontend/: .env.example  instrumentation-client.ts  instrumentation.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/history/: page.tsx
frontend/components/: AuthButton.tsx  ExampleGallery.tsx  FindingCard.tsx  HistoryList.tsx  PasteArea.tsx  SeverityBadge.tsx
frontend/lib/: api.ts  examples.ts  sentry-scrub.ts  supabase-server-auth.ts  supabase-server.ts
