[project]
name = "sharper"
version = "0.1.0"
description = "Rubric-driven linter for forecasting questions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "clerk-backend-api>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",  # FastAPI TestClient transitively needs httpx; pin explicitly
]

[project.scripts]
sharper = "sharper.cli:app"
sharper-api = "sharper.api:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sharper*"]

[tool.ruff]
line-length = 100
target-version = "py311"
